src/objects/Internal_Properties__c.object
<CustomObject>
    <label>Internal Properties</label>
    <nameField>
        <displayFormat>InternalProp={000000}</displayFormat>
        <label>Internal Properties Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>area__c</fullName>
        <label>area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>can_use_data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>can_use_data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commcare_edition__c</fullName>
        <label>commcare_edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commtrack_domain__c</fullName>
        <defaultValue>false</defaultValue>
        <label>commtrack_domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>custom_eula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>custom_eula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>goal_followup_rate__c</fullName>
        <label>goal_followup_rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>goal_time_period__c</fullName>
        <label>goal_time_period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>initiative__c</fullName>
        <label>initiative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalProp_Business_Unit__c</fullName>
        <label>InternalProp_Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>organization_name__c</fullName>
        <label>organization_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_model__c</fullName>
        <label>phone_model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <label>platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_manager__c</fullName>
        <label>project_manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_state__c</fullName>
        <label>project_state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>self_started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>self_started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                    <label>CommCareHQ</label>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>services__c</fullName>
        <label>services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_account_id__c</fullName>
        <label>sf_account_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_contract_id__c</fullName>
        <label>sf_contract_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_area__c</fullName>
        <label>sub_area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>using_adm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>using_adm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>using_call_center__c</fullName>
        <defaultValue>false</defaultValue>
        <label>using_call_center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>workshop_region__c</fullName>
        <label>workshop_region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>